tests/errors/sem.invalid-assignment.inferred-funcdef-into-mutable.or
main :: () -> void {
    x := (u: !t) -> t { return u; };
    x;
};
